--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Semangat Buat Marioo 🍄</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
@@ -19,33 +19,22 @@
       overflow: hidden;
       position: relative;
     }
-
-    h1 {
-      color: #fff100;
-      text-shadow: 2px 2px #000;
-      font-size: 1.2rem;
-      margin: 30px 0 10px;
-      text-align: center;
-    }
-
+    h1 { color: #fff100; text-shadow:2px 2px #000; margin:30px 0 10px; }
     #message {
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
+      background: rgba(0,0,0,0.7);
+      color: #fff;
       padding: 10px 20px;
       border-radius: 12px;
       margin-bottom: 20px;
       max-width: 90%;
       text-align: center;
     }
-
     .brick-box {
-      width: 60px;
-      height: 60px;
+      width: 60px; height:60px;
       background: url('https://i.imgur.com/ESbFzjt.png') no-repeat center/cover;
       margin-bottom: 20px;
       position: relative;
     }
-
     .coin {
       width: 30px;
       position: absolute;
@@ -54,41 +43,33 @@
       transform: translateX(-50%);
       animation: coinUp 0.8s ease-out forwards;
     }
-
     @keyframes coinUp {
-      0% { opacity: 1; transform: translateX(-50%) translateY(0); }
-      100% { opacity: 0; transform: translateX(-50%) translateY(-100px); }
+      0% { opacity:1; transform: translateX(-50%) translateY(0); }
+      100% { opacity:0; transform: translateX(-50%) translateY(-100px); }
     }
-
     button {
-      background: url('https://i.imgur.com/5Z7K0u2.png') no-repeat center;
-      background-size: cover;
-      width: 160px;
-      height: 50px;
-      color: white;
-      font-size: 0.6rem;
-      border: none;
-      font-family: 'Press Start 2P', cursive;
-      cursor: pointer;
-      margin-bottom: 40px;
+      background: url('https://i.imgur.com/5Z7K0u2.png') no-repeat center/cover;
+      width:160px; height:50px;
+      border:none;
+      font-family:'Press Start 2P', cursive;
+      color:#fff; font-size:0.6rem;
+      cursor:pointer;
+      margin-bottom:40px;
     }
-
     .mario {
-      width: 60px;
-      position: absolute;
-      bottom: 50px;
+      width:60px;
+      position:absolute;
+      bottom:50px;
       animation: jumpMario 0.5s ease-out forwards;
     }
-
     @keyframes jumpMario {
-      0% { bottom: 50px; }
-      50% { bottom: 150px; }
-      100% { bottom: 50px; }
+      0% { bottom:50px; }
+      50% { bottom:150px; }
+      100% { bottom:50px; }
     }
   </style>
 </head>
 <body>
-
   <h1>Semangat Marioo! 🍄</h1>
   <div id="message">Kamu luar biasa! 💪✨</div>
   <div class="brick-box" id="brickBox"></div>
@@ -106,23 +87,22 @@
     let index = 0;
 
     function triggerAction() {
-      // Ganti pesan
       index = (index + 1) % messages.length;
       document.getElementById("message").textContent = messages[index];
 
-      // Tambah animasi Mario
+      // Mario lompat
       const mario = document.createElement("img");
-      mario.src = "https://i.imgur.com/sN0bGvB.gif"; // animasi mario lompat
+      mario.src = "https://i.imgur.com/sN0bGvB.gif";
       mario.className = "mario";
       document.body.appendChild(mario);
-      setTimeout(() => mario.remove(), 600);
+      setTimeout(()=> mario.remove(),600);
 
-      // Tambah animasi koin
+      // Koin dari bata
       const coin = document.createElement("img");
-      coin.src = "https://i.imgur.com/o3bDg0B.gif"; // koin berputar
+      coin.src = "https://i.imgur.com/o3bDg0B.gif";
       coin.className = "coin";
       document.getElementById("brickBox").appendChild(coin);
-      setTimeout(() => coin.remove(), 800);
+      setTimeout(()=> coin.remove(),800);
     }
   </script>
 </body>
