--- a/index.html
+++ b/index.html
@@ -7,24 +7,60 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap');
 
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Fredoka', sans-serif;
-      background: linear-gradient(to bottom, #d4f0ff, #e6f7ff);
+      background: #d4f0ff;
       height: 100vh;
-      margin: 0;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .floating-bg {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .emoji-bg {
+      position: absolute;
+      font-size: 2rem;
+      animation: float 30s linear infinite;
+      opacity: 0.25;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(100vh) rotate(0deg); }
+      100% { transform: translateY(-120vh) rotate(360deg); }
+    }
+
+    h1, #message, button {
+      position: relative;
+      z-index: 1;
+    }
+
+    .content {
+      position: relative;
+      z-index: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
-      position: relative;
+      height: 100vh;
+      text-align: center;
     }
 
     h1 {
       font-size: 1.8rem;
       color: #2a8dd2;
       margin-bottom: 10px;
-      text-align: center;
     }
 
     #message {
@@ -33,10 +69,9 @@
       border-radius: 16px;
       font-size: 1.1rem;
       color: #333;
-      text-align: center;
-      max-width: 90%;
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
       margin-bottom: 24px;
+      max-width: 90%;
     }
 
     button {
@@ -60,6 +95,7 @@
       font-size: 2.2rem;
       animation: floatUp 1.4s ease-out forwards;
       pointer-events: none;
+      z-index: 2;
     }
 
     @keyframes floatUp {
@@ -71,9 +107,17 @@
 </head>
 <body>
 
-  <h1>Semangat Marioo! 🐾</h1>
-  <div id="message">Kamu anak baik banget hari ini! 🐶✨</div>
-  <button onclick="showMessage()">Klik aku ya 🐕</button>
+  <!-- Background emoji -->
+  <div class="floating-bg" id="floatingBg"></div>
+
+  <div class="content">
+    <h1>Semangat Marioo! 🐾</h1>
+    <div id="message">Kamu anak baik banget hari ini! 🐶✨</div>
+    <button onclick="showMessage()">Klik aku ya 🐕</button>
+  </div>
+
+  <!-- Suara woof -->
+  <audio id="woofSound" src="https://www.fesliyanstudios.com/play-mp3/387"></audio>
 
   <script>
     const messages = [
@@ -89,28 +133,5 @@
       "Banyak yang sayang kamu, termasuk aku 💌🐕"
     ];
 
-    const emojis = [
-      "🐶", "🐾", "🐕", "🦴", "💙", "😋", "🥎", "🐕‍🦺", "🎾", "🐩"
-    ];
-
-    function showMessage() {
-      // Ganti pesan
-      const msg = document.getElementById("message");
-      const newMsg = messages[Math.floor(Math.random() * messages.length)];
-      msg.innerText = newMsg;
-
-      // Buat emoji muncul
-      const emoji = document.createElement("div");
-      emoji.className = "emoji";
-      emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
-      emoji.style.left = `${Math.random() * 80 + 10}%`;
-      emoji.style.bottom = "80px";
-      document.body.appendChild(emoji);
-
-      // Hapus setelah animasi
-      setTimeout(() => emoji.remove(), 1400);
-    }
-  </script>
-
-</body>
-</html>
+    const emojis = ["🐶", "🐾", "🐕", "🦴", "💙", "😋", "🥎", "🐩", "🎾", "🐕‍🦺"];
+    const backgroundEmojis = ["🐶", "💙", "🐾
