--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     body {
       font-family: 'Fredoka', sans-serif;
-      background: #d4f0ff;
+      background: linear-gradient(to bottom, #d4f0ff, #ffffff);
       height: 100vh;
       overflow: hidden;
       position: relative;
@@ -31,14 +31,18 @@
 
     .emoji-bg {
       position: absolute;
-      font-size: 2rem;
+      font-size: 2.5rem;
       animation: float 30s linear infinite;
       opacity: 0.25;
     }
 
     @keyframes float {
-      0% { transform: translateY(100vh) rotate(0deg); }
-      100% { transform: translateY(-120vh) rotate(360deg); }
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+      }
+      100% {
+        transform: translateY(-120vh) rotate(360deg);
+      }
     }
 
     h1, #message, button {
@@ -134,4 +138,42 @@
     ];
 
     const emojis = ["🐶", "🐾", "🐕", "🦴", "💙", "😋", "🥎", "🐩", "🎾", "🐕‍🦺"];
-    const backgroundEmojis = ["🐶", "💙", "🐾
+    const backgroundEmojis = ["🐶", "💙", "🐾", "🦴"];
+
+    function showMessage() {
+      // Ganti pesan
+      const msg = document.getElementById("message");
+      msg.innerText = messages[Math.floor(Math.random() * messages.length)];
+
+      // Emoji lompat
+      const emoji = document.createElement("div");
+      emoji.className = "emoji";
+      emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
+      emoji.style.left = `${Math.random() * 80 + 10}%`;
+      emoji.style.bottom = "80px";
+      document.body.appendChild(emoji);
+      setTimeout(() => emoji.remove(), 1400);
+
+      // Suara woof
+      const woof = document.getElementById("woofSound");
+      woof.currentTime = 0;
+      woof.play();
+    }
+
+    // Emoji background bergerak pelan
+    const bgContainer = document.getElementById("floatingBg");
+    for (let i = 0; i < 40; i++) {
+      const bgEmoji = document.createElement("div");
+      bgEmoji.className = "emoji-bg";
+      bgEmoji.innerText = backgroundEmojis[Math.floor(Math.random() * backgroundEmojis.length)];
+      bgEmoji.style.left = `${Math.random() * 100}%`;
+      bgEmoji.style.fontSize = `${Math.random() * 2 + 2}rem`;
+      bgEmoji.style.opacity = 0.2 + Math.random() * 0.2;
+      bgEmoji.style.animationDuration = `${25 + Math.random() * 25}s`;
+      bgEmoji.style.top = `${Math.random() * 100}%`;
+      bgContainer.appendChild(bgEmoji);
+    }
+  </script>
+
+</body>
+</html>
